[build-system]
requires = [
    "bidict",
    "cloudpickle",
    "executorlib",
    "graphviz",
    "pandas",
    "toposort",
    "typeguard",
    "setuptools",
    "versioneer[toml]==0.29",
]
build-backend = "setuptools.build_meta"

[project]
name = "pyiron_workflow"
description = "pyiron_workflow - Graph-and-node based workflow tools."
readme = "docs/README.md"
keywords = [ "pyiron",]
requires-python = ">=3.10, <3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "bidict==0.23.1",
    "cloudpickle==3.1.0",
    "executorlib==0.0.8",
    "graphviz==0.20.3",
    "pandas==2.2.3",
    "pint==0.24.4",
    "pyiron_snippets==0.1.4",
    "toposort==1.10",
    "typeguard==4.4.1",
]
dynamic = [ "version",]
authors = [
    { name = "Liam Huber", email = "liamhuber@greyhavensolutions.com" },
]

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/pyiron/pyiron_workflow"
Documentation = "https://pyiron-workflow.readthedocs.io"
Repository = "https://github.com/pyiron/pyiron_workflow"

[tool.versioneer]
VCS = "git"
style = "pep440-pre"
versionfile_source = "pyiron_workflow/_version.py"
parentdir_prefix = "pyiron_workflow"
tag_prefix = "pyiron_workflow-"

[tool.setuptools.packages.find]
include = [ "pyiron_workflow*",]

[tool.setuptools.dynamic.version]
attr = "pyiron_workflow.__version__"

[tool.ruff]
exclude = ["docs", "notebooks", "setup.py", "_version.py"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flake8-comprehensions
    "C4",
    # eradicate
    "ERA",
]
ignore = ["E501"] #ignore line-length violations

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Ignore unused imports in init files -- we specify APIs this way

[tool.black]
extend-exclude = '''
(
  ^/docs
)
'''
