[build-system]
requires = [
    "hatchling==1.27.0",
    "hatch-vcs==0.5.0",
    "bagofholding",
    "bidict",
    "cloudpickle",
    "executorlib",
    "graphviz",
    "pandas",
    "pint",
    "pyiron_snippets",
    "rdflib",
    "semantikon",
    "toposort",
    "typeguard",
]
build-backend = "hatchling.build"

[project]
name = "pyiron_workflow"
description = "pyiron_workflow - Graph-and-node based workflow tools."
readme = "docs/README.md"
keywords = [ "pyiron",]
requires-python = ">=3.11, <3.14"
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "bagofholding==0.1.5",
    "bidict==0.23.1",
    "cloudpickle==3.1.1",
    "executorlib==1.7.1",
    "graphviz==0.21",
    "pandas==2.3.2",
    "pint==0.25",
    "pyiron_snippets==1.0.2",
    "rdflib==7.1.4",
    "semantikon==0.0.22",
    "toposort==1.10",
    "typeguard==4.4.4",
]
dynamic = [ "version",]
authors = [
    { name = "Liam Huber", email = "liamhuber@greyhavensolutions.com" },
]

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/pyiron/pyiron_workflow"
Documentation = "https://pyiron-workflow.readthedocs.io"
Repository = "https://github.com/pyiron/pyiron_workflow"

[project.optional-dependencies]
cluster = [
    "pysqa==0.3.2",
    "h5py==3.14.0",
]

[tool.hatch.build]
include = [
    "pyiron_workflow"
]

[tool.hatch.build.hooks.vcs]
version-file = "pyiron_workflow/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "pyiron_workflow"
]

[tool.hatch.build.targets.wheel]
packages = [
    "pyiron_workflow"
]

[tool.hatch.version]
source = "vcs"
path = "pyiron_workflow/_version.py"

[tool.ruff]
exclude = ["docs", "notebooks"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flake8-comprehensions
    "C4",
    # eradicate
    "ERA",
    # pylint
    "PL",
]
ignore = [
    # ignore line-length violations
    "E501",
    # Too many arguments in function definition
    "PLR0913",
    # Magic value used in comparison
    "PLR2004",
    # Import alias does not rename original package
    "PLC0414",
    # Too many branches
    "PLR0912",
    # Too many statements
    "PLR0915",
    # Too many return statements
    "PLR0911",
]

[tool.ruff.lint.per-file-ignores]
"pyiron_workflow/executors/__init__.py" = ["F401"]  # Ignore unused imports in init files -- we specify APIs this way
"pyiron_workflow/__init__.py" = ["F401"]  # Ignore unused imports in init files -- we specify APIs this way
"pyiron_workflow/api.py" = ["F401"]  # Ignore unused imports in api file -- we specify APIs this way
"pyiron_workflow/mixin/injection.py" = ["PLC0415"]  # Allow non-top imports
"pyiron_workflow/create.py" = ["PLC0415"]  # Allow non-top imports

[tool.black]
extend-exclude = '''
(
  ^/docs
)
'''

[tool.mypy]
exclude = [
    "^docs/conf\\.py$",
    "^tests/",
]
ignore_missing_imports = true
strict_equality = true
